# tdx

./: .gitignore  README.md  build_proto_python.sh  install_editable.sh  pre_install_ta_lib.sh  pyproject.toml  requirements.txt
docker/: Dockerfile  build-image.py
profile/: main.py  result.out
protos/tdx_tools/protos/: bar.proto  stock.proto  xrxd.proto
protos/tdx_tools/stock/: stock.proto
stubs/talib/: __init__.pyi  _ta_lib.pyi  stream.pyi
tdx_tools/: _version.py  datafedd_metrics.py  datafeed-bar.py  datafeed-stock.py  datafeed.py  datafeed_bar.py  datafeed_stock.py  datafeed_xrxd.py  global_var.py  globals.py  logger_config.py  tempCodeRunnerFile.py
tdx_tools/db/mongo/: mongo_client.py  mongo_info.py
tdx_tools/parse_tools/: infoharbor_ex.code  parse.py  user_cfg.py
tdx_tools/protos/: bar.proto  bar_pb2.py  bar_pb2.pyi  stock_pb2.py  xrxd_pb2.py  xrxd_pb2.pyi
tdx_tools/stock/: bar_pb2.py  bar_pb2.pyi  datafeed-stock.py  list_pb2.py  stock_pb2.py  stock_pb2.pyi
test/: datafeed_stock_update_date.py  test_globals.py  test_talib.py
